manifests/headlamp-deploy.yaml
### Prepare 3 Secrets
### headlamp-proxy-kubeconfig : kubeconfig - kube-odic-proxy - with kube-odic-proxy-ca cert
### oidc-ca : keycloak cert for oidc-ca
### oidc : base64 endcoded oidc config values
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: headlamp
      app.kubernetes.io/name: headlamp
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: headlamp
        app.kubernetes.io/name: headlamp
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - -oidc-use-cookie
        - -plugins-dir=/headlamp/plugins
        - -session-ttl=86400
        - -oidc-client-id=$(OIDC_CLIENT_ID)
        - -oidc-client-secret=$(OIDC_CLIENT_SECRET)
        - -oidc-idp-issuer-url=$(OIDC_ISSUER_URL)
        - -oidc-scopes=$(OIDC_SCOPES)
        - -oidc-callback-url=$(OIDC_CALLBACK_URL)
        - -oidc-validator-client-id=$(OIDC_VALIDATOR_CLIENT_ID)
        - -oidc-validator-idp-issuer-url=$(OIDC_VALIDATOR_ISSUER_URL)
        - -kubeconfig=/etc/headlamp/kubeconfig/config
        image: ghcr.io/headlamp-k8s/headlamp:v0.41.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: headlamp
        ports:
        - containerPort: 4466
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          privileged: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 100
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/headlamp/kubeconfig
          name: kubeconfig
        - mountPath: /etc/headlamp-oidc
          name: oidc-ca
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - keycloak.node-01
        ip: 192.168.222.146
      hostUsers: true
      restartPolicy: Always
      serviceAccount: headlamp
      serviceAccountName: headlamp
      volumes:
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: headlamp-proxy-kubeconfig
      - name: oidc-ca
        secret:
          defaultMode: 420
          secretName: keycloak-crt
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  name: headlamp
  namespace: headlamp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  sessionAffinity: None
  type: ClusterIP
